src/pl1transpiler/Pl1Parser/Pl1Parser.java
/* Pl1Parser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Pl1Parser.java */
package pl1transpiler.Pl1Parser;

import java.util.ArrayList;


public class Pl1Parser/*@bgen(jjtree)*/implements Pl1ParserTreeConstants, Pl1ParserConstants {/*@bgen(jjtree)*/
  protected JJTPl1ParserState jjtree = new JJTPl1ParserState();
        private String value;
        private String letter;
        private ArrayList<String> length = new ArrayList<String>();
        private int charLength;
        private String number;
        private String stringLength;
        private String pictureAttribiute;


        public String getValue() {
                return this.value;
        }

        public String getPictureAttirbute() {
                return this.pictureAttribiute;
        }

        public String getLength(int i) {
        return length.get(i);
        }

        public Pl1Parser() {
        }

  final public SimpleNode program() throws ParseException {/*@bgen(jjtree) PROGRAM */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        if (jj_2_2(3)) {
          jj_consume_token(SPACE_SEPARATOR);
        } else {
          ;
        }
        var_declaration();
        jj_consume_token(SPACE_SEPARATOR);
      }
jjtree.closeNodeScope(jjtn000, true);
                                                                     jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public void var_declaration() throws ParseException {/*@bgen(jjtree) VAR */
 SimpleNode jjtn000 = new SimpleNode(JJTVAR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);int scope = 0; Token t;
    try {
      if (jj_2_10(3)) {
        if (jj_2_3(3)) {
          jj_consume_token(DCL);
        } else if (jj_2_4(3)) {
          jj_consume_token(DECLARE);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_5(3)) {
          jj_consume_token(SPACE_SEPARATOR);
          scope = scope();
        } else if (jj_2_6(3)) {
          jj_consume_token(SPACE_SEPARATOR);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        id();
        if (jj_2_8(3)) {
          jj_consume_token(SPACE_SEPARATOR);
          type();
        } else if (jj_2_9(3)) {
          jj_consume_token(SPACE_SEPARATOR);
          type();
          jj_consume_token(COMMA_SEPARATOR);
        } else {
          label_2:
          while (true) {
            if (jj_2_7(3)) {
              ;
            } else {
              break label_2;
            }
            jj_consume_token(COMMA_SEPARATOR);
            minor(scope);
          }
        }
      } else if (jj_2_11(3)) {
        minor(scope);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
}

  final public void minor(int parentScope) throws ParseException {/*@bgen(jjtree) MINOR */
 SimpleNode jjtn000 = new SimpleNode(JJTMINOR);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);int scope = 0;
    try {
      if (jj_2_12(3)) {
        scope = scope();
      } else if (jj_2_13(3)) {
        jj_consume_token(SPACE_SEPARATOR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      id();
      if (jj_2_15(3)) {
        jj_consume_token(SPACE_SEPARATOR);
        type();
      } else if (jj_2_16(3)) {
        jj_consume_token(SPACE_SEPARATOR);
        type();
        jj_consume_token(COMMA_SEPARATOR);
      } else {
        label_3:
        while (true) {
          if (jj_2_14(3)) {
            ;
          } else {
            break label_3;
          }
          jj_consume_token(COMMA_SEPARATOR);
          minor(scope);
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                       jjtree.clearNodeScope(jjtn000);
                       jjtc000 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte000 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte000;}
                     }
                     if (jjte000 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte000;}
                     }
                     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
}

  final public int scope() throws ParseException {/*@bgen(jjtree) SCOPE */
 SimpleNode jjtn000 = new SimpleNode(JJTSCOPE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER);
      jj_consume_token(SPACE_SEPARATOR);
jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
{if ("" != null) return Integer.parseInt(t.image);}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
}

  final public void type() throws ParseException {/*@bgen(jjtree) TYPE */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_17(3)) {
        codedArithmetic();
      } else if (jj_2_18(3)) {
        String();
      } else if (jj_2_19(3)) {
        Locator();
      } else if (jj_2_20(3)) {
        Picture();
      } else if (jj_2_21(3)) {
        File();
      } else if (jj_2_22(3)) {
        Entry();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
}

  final public void Entry() throws ParseException {/*@bgen(jjtree) Entry */
  SimpleNode jjtn000 = new SimpleNode(JJTENTRY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ENTRY);
      if (jj_2_23(3)) {
        jj_consume_token(RETURNS);
      } else {
        ;
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void File() throws ParseException {/*@bgen(jjtree) File */
  SimpleNode jjtn000 = new SimpleNode(JJTFILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FILE);
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(ENVIRONMENT);
      jj_consume_token(SPACE_SEPARATOR);
      if (jj_2_24(3)) {
        Stream();
      } else if (jj_2_25(3)) {
        Record();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_26(3)) {
        Input();
      } else if (jj_2_27(3)) {
        Output();
      } else if (jj_2_28(3)) {
        Update();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_29(3)) {
        Sequential();
      } else if (jj_2_30(3)) {
        Direct();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_31(3)) {
        Buffered();
      } else if (jj_2_32(3)) {
        Unbuffered();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(KEYED);
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(PRINT);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Stream() throws ParseException {/*@bgen(jjtree) Stream */
  SimpleNode jjtn000 = new SimpleNode(JJTSTREAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(STREAM);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Record() throws ParseException {/*@bgen(jjtree) Record */
  SimpleNode jjtn000 = new SimpleNode(JJTRECORD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(RECORD);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Input() throws ParseException {/*@bgen(jjtree) Input */
  SimpleNode jjtn000 = new SimpleNode(JJTINPUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(INPUT);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Output() throws ParseException {/*@bgen(jjtree) Output */
  SimpleNode jjtn000 = new SimpleNode(JJTOUTPUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(OUTPUT);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Update() throws ParseException {/*@bgen(jjtree) Update */
  SimpleNode jjtn000 = new SimpleNode(JJTUPDATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(UPDATE);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Sequential() throws ParseException {/*@bgen(jjtree) Sequential */
  SimpleNode jjtn000 = new SimpleNode(JJTSEQUENTIAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(SEQUENTIAL);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Direct() throws ParseException {/*@bgen(jjtree) Direct */
  SimpleNode jjtn000 = new SimpleNode(JJTDIRECT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(DIRECT);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Buffered() throws ParseException {/*@bgen(jjtree) Buffered */
  SimpleNode jjtn000 = new SimpleNode(JJTBUFFERED);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(BUFFERED);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Unbuffered() throws ParseException {/*@bgen(jjtree) Unbuffered */
  SimpleNode jjtn000 = new SimpleNode(JJTUNBUFFERED);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(UNBUFFERED);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public String Picture() throws ParseException {/*@bgen(jjtree) PictureExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTPICTUREEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String t;
    try {
      if (jj_2_33(3)) {
        Pic();
      } else if (jj_2_34(3)) {
        Widepic();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_37(3)) {
        if (jj_2_35(3)) {
          Real();
        } else if (jj_2_36(3)) {
          Complex();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      t = PictureAttribute();
      if (jj_2_38(3)) {
        jj_consume_token(SPACE_SEPARATOR);
        jj_consume_token(VALUE);
      } else {
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return pictureAttribiute = t;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public void Pic() throws ParseException {/*@bgen(jjtree) Picture */
  SimpleNode jjtn000 = new SimpleNode(JJTPICTURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_39(3)) {
        jj_consume_token(PIC);
      } else if (jj_2_40(3)) {
        jj_consume_token(PICTURE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public void Widepic() throws ParseException {/*@bgen(jjtree) Widepic */
  SimpleNode jjtn000 = new SimpleNode(JJTWIDEPIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WIDEPIC);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
}

  final public String PictureAttribute() throws ParseException {/*@bgen(jjtree) PictureAttribute */
 SimpleNode jjtn000 = new SimpleNode(JJTPICTUREATTRIBUTE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);String t1 = "";
 String t11 = "";

 String t2 = "";
 String t22 = "";
 String t222 = "";
 String t2222 = "";

 String t3 = "";
 String t33 = "";
 String t333 = "";

 String t4 = "";

 String t5 = "";
 String t55 = "";
    try {
      jj_consume_token(SPACE_SEPARATOR);
      jj_consume_token(111);
      if (jj_2_47(3)) {
        t1 = LengthPicture();
        if (jj_2_41(3)) {
          t11 = LetterPicture();
        } else if (jj_2_42(3)) {
          t11 = NumberPicture();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_48(3)) {
        t2 = LetterPicture();
        if (jj_2_44(3)) {
          t22 = NumberPicture();
          label_4:
          while (true) {
            if (jj_2_43(3)) {
              ;
            } else {
              break label_4;
            }
            t222 = NumberPicture();
          }
        } else {
          ;
        }
        t2222 = LetterPicture();
      } else if (jj_2_49(3)) {
        t3 = NumberPicture();
        t33 = LetterPicture();
        t333 = NumberPicture();
      } else if (jj_2_50(3)) {
        t4 = LetterPicture();
      } else {
        if (jj_2_46(3)) {
          t5 = NumberPicture();
          label_5:
          while (true) {
            if (jj_2_45(3)) {
              ;
            } else {
              break label_5;
            }
            t55 = NumberPicture();
          }
        } else {
          ;
        }
      }
      jj_consume_token(111);
jjtree.closeNodeScope(jjtn000, true);
       jjtc000 = false;
if(t1 != "") {if ("" != null) return t1 + t11;}
        if(t2 != "") {if ("" != null) return t2 + t22 + t222 + t2222;}
        if(t3 != "") {if ("" != null) return t3 + t33 + t333;}
        if(t4 != "") {if ("" != null) return t4;}
        if(t5 != "") {if ("" != null) return t5 + t55;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}
